--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,9 @@
-.header{
-    height: 70px;
+.app-header{
+    background: #343a40;
     color: #fff;
-    background: #7876CF;
+    padding: 20px;
+}
+
+.logo{
+    font-size: 24px;
 }
